# posterr

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
src/: config.py  main.py
src/dto/: post.py  user.py
src/entrypoint/: post.py  router.py  user.py
src/model/: post.py  user.py
src/repository/: database.py  post.py  user.py
src/service/: post.py  user.py
tests/: conftest.py  helpers.py
tests/routes/: test_post.py  test_user.py
