[tool.poetry]
name = "Poster"
version = "0.1.0"
description = "Minimal twitter like app"
authors = ["gabriel-viviani <gabrielviviani98@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
mypy = "^0.942"
flake8 = "^4.0.1"
Faker = "^13.3.5"
SQLAlchemy = "^1.4.35"
pytz = "^2022.1"
fastapi-pagination = "^0.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
